--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "base-64": "^1.0.0",
-    "expo": "~50.0.2",
+    "expo": "^50.0.3",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.2",
