--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "base-64": "^1.0.0",
@@ -19,7 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-base64": "^0.2.1",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
